# synthdigger

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.do/: app.yaml.example
docs/: DEPLOYMENT.md
functions/: README.md  local_dev_server.py  project.yml  sync_lib.py
functions/lib/: build.sh
scripts/: migrate_pg_to_duckdb.py  refresh_plex_r2.ps1  refresh_style_mood_r2.ps1
src/music_embeddings/: audio.py  cli.py  cloud.py  cloud_history.py  config.py  database.py  datasource.py  embedder.py  genre_selection.py  genres.py  labels.py  models.py  playlist.py  plex.py  plex_auth.py  publish.py  serialization.py  tagger.py  version.py  webauth.py
static-site/: app.js  index.html  style.css
tests/: test_embedder.py  test_genre_selection.py  test_playlist_novelty.py  test_tagger.py
wiki/: 01-Before-You-Start.md  02-Install-the-App.md  03-Connect-to-Plex.md  04-Build-Your-Music-Index.md  05-Make-Playlists-from-Your-Computer.md  06-Fork-the-Repository.md  07-Sign-Up-Cloudflare-R2.md  08-Sign-Up-DigitalOcean-and-Install-doctl.md  09-Optional-AI-Features-OpenRouter.md  10-Deploy-the-Web-App.md  11-Custom-Domain.md  12-Keep-Data-Fresh-and-Day-2.md  13-Using-the-Web-App.md  14-Troubleshooting.md  Environment-Variable-Reference.md  Glossary-and-FAQ.md  Home.md  Overview-and-How-It-Works.md  _Footer.md  _Sidebar.md
